<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:clickable="true"
    android:focusable="true"
    android:foreground="?android:attr/selectableItemBackground"
    android:padding="16dp"
    style="@style/CardView.Light"
    >

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/movie_poster"
        android:layout_width="@dimen/poster_width_small"
        android:layout_height="@dimen/poster_height_small"
        android:src="@android:color/darker_gray"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/movie_title"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:ellipsize="end"
        android:singleLine="true"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/movie_poster"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="Movie Title" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/rating"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:textSize="18sp"
        app:layout_constraintStart_toEndOf="@+id/movie_poster"
        app:layout_constraintTop_toBottomOf="@+id/movie_title"
        android:text="@string/rating" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/movie_rating"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintStart_toEndOf="@+id/rating"
        app:layout_constraintTop_toBottomOf="@+id/movie_title"
        tools:text="8.9" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/movie_desc"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:ellipsize="end"
        android:maxLines="3"
        android:scrollHorizontally="false"
        android:textSize="12sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/movie_poster"
        tools:text="movie desc lorem ipsimsajskj  as doasoashh vie desc lorem ipsimsajskj  as doasoashhoiass asoii oiihaoiaskj oiashoasndas oaiso asoif ksaldsahf ahoi soaodsa sidke movie desc lorem ipsimsajskj  as doasoashhoiass asoii oiihaoiaskj oiashoasndas oaiso asoif ksaldsahf ahoi soaodsa sidke" />
</androidx.constraintlayout.widget.ConstraintLayout>