<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/set_favorite_menu"
        android:title="@string/set_favorite"
        android:icon="@drawable/ic_favorite_border_24dp"
        app:showAsAction="always"
        />
</menu>