<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/home_page"
        android:title="@string/all"
        android:icon="@drawable/ic_home_black_24dp"/>
    <item
        android:id="@+id/favorite_page"
        android:title="@string/favorite"
        android:icon="@drawable/ic_favorite_black_24dp"/>
</menu>